// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numbered-code-snippet Basic renders as expected 1`] = `
<div
  className="prose relative round z0 scroll-styled overflow-auto"
  style={
    Object {
      "maxHeight": 450,
    }
  }
>
  <pre
    className="py0 px0 txt-break-word mb0"
  >
    <code
      className="px0 hljs"
    >
      <div
        className="relative z2 h30"
        data-chunk-code="chunk-0"
      >
        <button
          className="w-full bg-blue-faint color-blue-dark color-blue-on-hover pl12 py6 cursor-pointer txt-s h30 flex flex--center-cross"
          onClick={[Function]}
        >
          <div>
            <div
              className="mb-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-up"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-up"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-up
              </span>
            </div>
            <div
              className="mt-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-down"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-down"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-down
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "marginLeft": "8px",
              }
            }
          >
            show hidden lines
          </div>
        </button>
      </div>
      <div
        className="relative z2"
        data-chunk-code="chunk-1"
      >
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={6}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">override</span> <span class=\\"token keyword\\">func</span> <span class=\\"token function-definition function\\">viewDidLoad</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={7}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">super</span><span class=\\"token punctuation\\">.</span><span class=\\"token function\\">viewDidLoad</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={8}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={9}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">let</span> mapView <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">MGLMapView</span><span class=\\"token punctuation\\">(</span>frame<span class=\\"token punctuation\\">:</span> view<span class=\\"token punctuation\\">.</span>bounds<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={10}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span>styleURL <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">MGLStyle</span><span class=\\"token punctuation\\">.</span>lightStyleURL",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={11}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span>autoresizingMask <span class=\\"token operator\\">=</span> <span class=\\"token punctuation\\">[</span><span class=\\"token punctuation\\">.</span>flexibleWidth<span class=\\"token punctuation\\">,</span> <span class=\\"token punctuation\\">.</span>flexibleHeight<span class=\\"token punctuation\\">]</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={12}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={13}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">setCenter</span><span class=\\"token punctuation\\">(</span><span class=\\"token class-name\\">CLLocationCoordinate2D</span><span class=\\"token punctuation\\">(</span>latitude<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">44.971</span><span class=\\"token punctuation\\">,</span> longitude<span class=\\"token punctuation\\">:</span> <span class=\\"token operator\\">-</span><span class=\\"token number\\">93.261</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">,</span> zoomLevel<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">10</span><span class=\\"token punctuation\\">,</span> animated<span class=\\"token punctuation\\">:</span> <span class=\\"token boolean\\">false</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={14}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={15}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span>delegate <span class=\\"token operator\\">=</span> <span class=\\"token keyword\\">self</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={16}
            style={
              Object {
                "marginLeft": -92.69999999999999,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "view<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">addSubview</span><span class=\\"token punctuation\\">(</span>mapView<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={17}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">}</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
      <div
        className="relative z2 h30"
        data-chunk-code="chunk-2"
      >
        <button
          className="w-full bg-blue-faint color-blue-dark color-blue-on-hover pl12 py6 cursor-pointer txt-s h30 flex flex--center-cross"
          onClick={[Function]}
        >
          <div>
            <div
              className="mb-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-up"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-up"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-up
              </span>
            </div>
            <div
              className="mt-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-down"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-down"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-down
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "marginLeft": "8px",
              }
            }
          >
            show hidden lines
          </div>
        </button>
      </div>
    </code>
  </pre>
  <div
    className="absolute left right z2 w6"
    data-chunk-overlay="chunk-1"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <div
      className="bg-blue h-full"
    />
  </div>
  <div
    className="absolute z3 right mr3 color-white"
    data-chunk-copy="chunk-1"
    style={
      Object {
        "opacity": 0,
        "transition": "opacity 300ms linear",
      }
    }
  >
    <div
      aria-label="Copy"
      data-clipboard-text="        override func viewDidLoad() {
            super.viewDidLoad()

            let mapView = MGLMapView(frame: view.bounds)
            mapView.styleURL = MGLStyle.lightStyleURL
            mapView.autoresizingMask = [.flexibleWidth, .flexibleHeight]

            mapView.setCenter(CLLocationCoordinate2D(latitude: 44.971, longitude: -93.261), zoomLevel: 10, animated: false)

            mapView.delegate = self
            view.addSubview(mapView)
        }
"
      data-testid="copy-button"
      onClick={[Function]}
      role="button"
    >
      <span
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <div
          aria-controls="radix-0"
          aria-expanded={false}
          aria-haspopup="dialog"
          data-state="closed"
          onClick={[Function]}
          type="button"
        >
          <button
            className="btn btn--xs py3 px3 round"
            data-state="closed"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onPointerDown={[Function]}
            onPointerLeave={[Function]}
            onPointerMove={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-clipboard"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`numbered-code-snippet Don't collapse lines renders as expected 1`] = `
<div
  className="prose relative round z0 scroll-styled overflow-auto"
  style={
    Object {
      "maxHeight": 450,
    }
  }
>
  <pre
    className="py0 px0 txt-break-word mb0"
  >
    <code
      className="px0 hljs"
    >
      <div
        className="relative z2 false"
        data-chunk-code="chunk-0"
      >
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={1}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">import</span> <span class=\\"token class-name\\">UIKit</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={2}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">import</span> <span class=\\"token class-name\\">Mapbox</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={3}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={4}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">class</span> <span class=\\"token class-name\\">DDSCircleLayerTutorialViewController</span><span class=\\"token punctuation\\">:</span> <span class=\\"token class-name\\">UIViewController</span><span class=\\"token punctuation\\">,</span> <span class=\\"token class-name\\">MGLMapViewDelegate</span> <span class=\\"token punctuation\\">{</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={5}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 40.9,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={6}
            style={
              Object {
                "marginLeft": -40.9,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">override</span> <span class=\\"token keyword\\">func</span> <span class=\\"token function-definition function\\">viewDidLoad</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={7}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">super</span><span class=\\"token punctuation\\">.</span><span class=\\"token function\\">viewDidLoad</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={8}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={9}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">let</span> mapView <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">MGLMapView</span><span class=\\"token punctuation\\">(</span>frame<span class=\\"token punctuation\\">:</span> view<span class=\\"token punctuation\\">.</span>bounds<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={10}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span>styleURL <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">MGLStyle</span><span class=\\"token punctuation\\">.</span>lightStyleURL",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={11}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span>autoresizingMask <span class=\\"token operator\\">=</span> <span class=\\"token punctuation\\">[</span><span class=\\"token punctuation\\">.</span>flexibleWidth<span class=\\"token punctuation\\">,</span> <span class=\\"token punctuation\\">.</span>flexibleHeight<span class=\\"token punctuation\\">]</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={12}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={13}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">setCenter</span><span class=\\"token punctuation\\">(</span><span class=\\"token class-name\\">CLLocationCoordinate2D</span><span class=\\"token punctuation\\">(</span>latitude<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">44.971</span><span class=\\"token punctuation\\">,</span> longitude<span class=\\"token punctuation\\">:</span> <span class=\\"token operator\\">-</span><span class=\\"token number\\">93.261</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">,</span> zoomLevel<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">10</span><span class=\\"token punctuation\\">,</span> animated<span class=\\"token punctuation\\">:</span> <span class=\\"token boolean\\">false</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={14}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={15}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "mapView<span class=\\"token punctuation\\">.</span>delegate <span class=\\"token operator\\">=</span> <span class=\\"token keyword\\">self</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={16}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "view<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">addSubview</span><span class=\\"token punctuation\\">(</span>mapView<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 40.9,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={17}
            style={
              Object {
                "marginLeft": -40.9,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">}</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={18}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 40.9,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={19}
            style={
              Object {
                "marginLeft": -40.9,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">func</span> <span class=\\"token function-definition function\\">mapView</span><span class=\\"token punctuation\\">(</span><span class=\\"token omit keyword\\">_</span> mapView<span class=\\"token punctuation\\">:</span> <span class=\\"token class-name\\">MGLMapView</span><span class=\\"token punctuation\\">,</span> didFinishLoading style<span class=\\"token punctuation\\">:</span> <span class=\\"token class-name\\">MGLStyle</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={20}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
      <div
        className="relative z2"
        data-chunk-code="chunk-1"
      >
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={21}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">let</span> source <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">MGLVectorTileSource</span><span class=\\"token punctuation\\">(</span>identifier<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"historical-places\\"</span></span><span class=\\"token punctuation\\">,</span> configurationURL<span class=\\"token punctuation\\">:</span> <span class=\\"token function\\">URL</span><span class=\\"token punctuation\\">(</span>string<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"mapbox://examples.5zzwbooj\\"</span></span><span class=\\"token punctuation\\">)</span><span class=\\"token operator\\">!</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={22}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={23}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "style<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">addSource</span><span class=\\"token punctuation\\">(</span>source<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
      <div
        className="relative z2 false"
        data-chunk-code="chunk-2"
      >
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={24}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={25}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">let</span> layer <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">MGLCircleStyleLayer</span><span class=\\"token punctuation\\">(</span>identifier<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"landmarks\\"</span></span><span class=\\"token punctuation\\">,</span> source<span class=\\"token punctuation\\">:</span> source<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={26}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={27}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "layer<span class=\\"token punctuation\\">.</span>sourceLayerIdentifier <span class=\\"token operator\\">=</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"HPC_landmarks-b60kqn\\"</span></span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={28}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={29}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "layer<span class=\\"token punctuation\\">.</span>circleColor <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">NSExpression</span><span class=\\"token punctuation\\">(</span>forConstantValue<span class=\\"token punctuation\\">:</span> <span class=\\"token literal constant\\">#colorLiteral</span><span class=\\"token punctuation\\">(</span>red<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">0.67</span><span class=\\"token punctuation\\">,</span> green<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">0.28</span><span class=\\"token punctuation\\">,</span> blue<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">0.13</span><span class=\\"token punctuation\\">,</span> alpha<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">1</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={30}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={31}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "layer<span class=\\"token punctuation\\">.</span>circleOpacity <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">NSExpression</span><span class=\\"token punctuation\\">(</span>forConstantValue<span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">0.8</span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={32}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={33}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">let</span> zoomStops <span class=\\"token operator\\">=</span> <span class=\\"token punctuation\\">[</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={34}
            style={
              Object {
                "marginLeft": -98.69999999999999,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token number\\">10</span><span class=\\"token punctuation\\">:</span> <span class=\\"token class-name\\">NSExpression</span><span class=\\"token punctuation\\">(</span>format<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"(2018 - Constructi) / 30\\"</span></span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">,</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 98.69999999999999,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={35}
            style={
              Object {
                "marginLeft": -98.69999999999999,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token number\\">13</span><span class=\\"token punctuation\\">:</span> <span class=\\"token class-name\\">NSExpression</span><span class=\\"token punctuation\\">(</span>format<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"(2018 - Constructi) / 10\\"</span></span><span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={36}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">]</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={37}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
      <div
        className="relative z2"
        data-chunk-code="chunk-3"
      >
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={38}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "layer<span class=\\"token punctuation\\">.</span>circleRadius <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">NSExpression</span><span class=\\"token punctuation\\">(</span>format<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"mgl_interpolate:withCurveType:parameters:stops:($zoomLevel, 'linear', nil, %@)\\"</span></span><span class=\\"token punctuation\\">,</span> zoomStops<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
      <div
        className="relative z2 false"
        data-chunk-code="chunk-4"
      >
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={39}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={40}
            style={
              Object {
                "marginLeft": -69.8,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "style<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">addLayer</span><span class=\\"token punctuation\\">(</span>layer<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 40.9,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={41}
            style={
              Object {
                "marginLeft": -40.9,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">}</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w36"
            data-content={42}
            style={
              Object {
                "marginLeft": -12,
                "marginTop": -0,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">}</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
    </code>
  </pre>
  <div
    className="absolute left right z2 w6"
    data-chunk-overlay="chunk-1"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <div
      className="bg-blue h-full"
    />
  </div>
  <div
    className="absolute left right z2 w6"
    data-chunk-overlay="chunk-3"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <div
      className="bg-blue h-full"
    />
  </div>
  <div
    className="absolute z3 right mr3 color-white"
    data-chunk-copy="chunk-1"
    style={
      Object {
        "opacity": 0,
        "transition": "opacity 300ms linear",
      }
    }
  >
    <div
      aria-label="Copy"
      data-clipboard-text="        let source = MGLVectorTileSource(identifier: \\"historical-places\\", configurationURL: URL(string: \\"mapbox://examples.5zzwbooj\\")!)

        style.addSource(source)
"
      data-testid="copy-button"
      onClick={[Function]}
      role="button"
    >
      <span
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <div
          aria-controls="radix-1"
          aria-expanded={false}
          aria-haspopup="dialog"
          data-state="closed"
          onClick={[Function]}
          type="button"
        >
          <button
            className="btn btn--xs py3 px3 round"
            data-state="closed"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onPointerDown={[Function]}
            onPointerLeave={[Function]}
            onPointerMove={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-clipboard"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
  <div
    className="absolute z3 right mr3 color-white"
    data-chunk-copy="chunk-3"
    style={
      Object {
        "opacity": 0,
        "transition": "opacity 300ms linear",
      }
    }
  >
    <div
      aria-label="Copy"
      data-clipboard-text="        layer.circleRadius = NSExpression(format: \\"mgl_interpolate:withCurveType:parameters:stops:($zoomLevel, 'linear', nil, %@)\\", zoomStops)
"
      data-testid="copy-button"
      onClick={[Function]}
      role="button"
    >
      <span
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <div
          aria-controls="radix-2"
          aria-expanded={false}
          aria-haspopup="dialog"
          data-state="closed"
          onClick={[Function]}
          type="button"
        >
          <button
            className="btn btn--xs py3 px3 round"
            data-state="closed"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onPointerDown={[Function]}
            onPointerLeave={[Function]}
            onPointerMove={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-clipboard"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`numbered-code-snippet First line renders as expected 1`] = `
<div
  className="prose relative round z0 scroll-styled overflow-auto"
  style={
    Object {
      "maxHeight": 450,
    }
  }
>
  <pre
    className="py0 px0 txt-break-word mb0"
  >
    <code
      className="px0 hljs"
    >
      <div
        className="relative z2"
        data-chunk-code="chunk-1"
      >
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={1}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">import</span> <span class=\\"token class-name\\">UIKit</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={2}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">import</span> <span class=\\"token class-name\\">Mapbox</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={3}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={4}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token keyword\\">class</span> <span class=\\"token class-name\\">DDSCircleLayerTutorialViewController</span><span class=\\"token punctuation\\">:</span> <span class=\\"token class-name\\">UIViewController</span><span class=\\"token punctuation\\">,</span> <span class=\\"token class-name\\">MGLMapViewDelegate</span> <span class=\\"token punctuation\\">{</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={5}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
      <div
        className="relative z2 h30"
        data-chunk-code="chunk-2"
      >
        <button
          className="w-full bg-blue-faint color-blue-dark color-blue-on-hover pl12 py6 cursor-pointer txt-s h30 flex flex--center-cross"
          onClick={[Function]}
        >
          <div>
            <div
              className="mb-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-up"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-up"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-up
              </span>
            </div>
            <div
              className="mt-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-down"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-down"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-down
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "marginLeft": "8px",
              }
            }
          >
            show hidden lines
          </div>
        </button>
      </div>
    </code>
  </pre>
  <div
    className="absolute left right z2 w6"
    data-chunk-overlay="chunk-1"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <div
      className="bg-blue h-full"
    />
  </div>
  <div
    className="absolute z3 right mr3 color-white"
    data-chunk-copy="chunk-1"
    style={
      Object {
        "opacity": 0,
        "transition": "opacity 300ms linear",
      }
    }
  >
    <div
      aria-label="Copy"
      data-clipboard-text="import UIKit
import Mapbox

class DDSCircleLayerTutorialViewController: UIViewController, MGLMapViewDelegate {

"
      data-testid="copy-button"
      onClick={[Function]}
      role="button"
    >
      <span
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <div
          aria-controls="radix-3"
          aria-expanded={false}
          aria-haspopup="dialog"
          data-state="closed"
          onClick={[Function]}
          type="button"
        >
          <button
            className="btn btn--xs py3 px3 round"
            data-state="closed"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onPointerDown={[Function]}
            onPointerLeave={[Function]}
            onPointerMove={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-clipboard"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`numbered-code-snippet Last line renders as expected 1`] = `
<div
  className="prose relative round z0 scroll-styled overflow-auto"
  style={
    Object {
      "maxHeight": 450,
    }
  }
>
  <pre
    className="py0 px0 txt-break-word mb0"
  >
    <code
      className="px0 hljs"
    >
      <div
        className="relative z2 h30"
        data-chunk-code="chunk-0"
      >
        <button
          className="w-full bg-blue-faint color-blue-dark color-blue-on-hover pl12 py6 cursor-pointer txt-s h30 flex flex--center-cross"
          onClick={[Function]}
        >
          <div>
            <div
              className="mb-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-up"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-up"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-up
              </span>
            </div>
            <div
              className="mt-neg3"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-chevron-down"
                focusable="false"
                style={
                  Object {
                    "height": 12,
                    "width": 12,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-down"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                chevron-down
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "marginLeft": "8px",
              }
            }
          >
            show hidden lines
          </div>
        </button>
      </div>
      <div
        className="relative z2"
        data-chunk-code="chunk-1"
      >
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={38}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "layer<span class=\\"token punctuation\\">.</span>circleRadius <span class=\\"token operator\\">=</span> <span class=\\"token class-name\\">NSExpression</span><span class=\\"token punctuation\\">(</span>format<span class=\\"token punctuation\\">:</span> <span class=\\"token string-literal\\"><span class=\\"token string\\">\\"mgl_interpolate:withCurveType:parameters:stops:($zoomLevel, 'linear', nil, %@)\\"</span></span><span class=\\"token punctuation\\">,</span> zoomStops<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={39}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": " ",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 69.8,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={40}
            style={
              Object {
                "marginLeft": -63.8,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "style<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">addLayer</span><span class=\\"token punctuation\\">(</span>layer<span class=\\"token punctuation\\">)</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 40.9,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={41}
            style={
              Object {
                "marginLeft": -34.9,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">}</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
        <div
          className="pr12 py3 bg-white"
          style={
            Object {
              "paddingLeft": 12,
            }
          }
        >
          <div
            className="absolute fl color-text align-r pr6 w30 py3"
            data-content={42}
            style={
              Object {
                "marginLeft": -6,
                "marginTop": -3,
              }
            }
            unselectable="on"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"token punctuation\\">}</span>",
              }
            }
            style={
              Object {
                "marginLeft": 43.349999999999994,
                "textIndent": -14.45,
              }
            }
          />
        </div>
      </div>
    </code>
  </pre>
  <div
    className="absolute left right z2 w6"
    data-chunk-overlay="chunk-1"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <div
      className="bg-blue h-full"
    />
  </div>
  <div
    className="absolute z3 right mr3 color-white"
    data-chunk-copy="chunk-1"
    style={
      Object {
        "opacity": 0,
        "transition": "opacity 300ms linear",
      }
    }
  >
    <div
      aria-label="Copy"
      data-clipboard-text="        layer.circleRadius = NSExpression(format: \\"mgl_interpolate:withCurveType:parameters:stops:($zoomLevel, 'linear', nil, %@)\\", zoomStops)

        style.addLayer(layer)
    }
}
"
      data-testid="copy-button"
      onClick={[Function]}
      role="button"
    >
      <span
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <div
          aria-controls="radix-4"
          aria-expanded={false}
          aria-haspopup="dialog"
          data-state="closed"
          onClick={[Function]}
          type="button"
        >
          <button
            className="btn btn--xs py3 px3 round"
            data-state="closed"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onPointerDown={[Function]}
            onPointerLeave={[Function]}
            onPointerMove={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-clipboard"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
</div>
`;
